--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,6 +5,7 @@ description = ""
 authors = [{name = "Stijn Caerts", email = "stijn.caerts@vito.be"}]
 dependencies = [
     "aiohttp~=3.8.4",
+    "pydantic~=2.7.1",
     "rich"
 ]
 requires-python = ">=3.8"
